--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     }
   },
   "jest": {
+    "testEnvironment": "node",
     "transform": {
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
@@ -72,37 +73,44 @@
     }
   },
   "devDependencies": {
-    "@types/jest": "^20.0.0",
-    "@types/node": "^8.0.0",
+    "@types/debug": "^0.0.30",
+    "@types/jest": "^20.0.6",
+    "@types/lodash": "^4.14.71",
+    "@types/node": "^8.0.19",
     "colors": "^1.1.2",
     "commitizen": "^2.9.6",
     "coveralls": "^2.13.1",
-    "cross-env": "^5.0.1",
+    "cross-env": "^5.0.4",
     "cz-conventional-changelog": "^2.0.0",
     "husky": "^0.14.0",
     "jest": "^20.0.4",
-    "lint-staged": "^4.0.0",
+    "lint-staged": "^4.0.3",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.4.4",
     "prompt": "^1.0.0",
     "replace-in-file": "^2.5.0",
     "rimraf": "^2.6.1",
-    "rollup": "^0.43.1",
-    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup": "^0.45.2",
+    "rollup-plugin-commonjs": "^8.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "semantic-release": "^6.3.6",
-    "ts-jest": "^20.0.6",
+    "ts-jest": "^20.0.10",
     "ts-node": "^3.0.6",
     "tsc-watch": "^1.0.5",
-    "tslint": "^5.4.3",
-    "tslint-config-prettier": "^1.1.0",
+    "tslint": "^5.6.0",
+    "tslint-config-prettier": "^1.3.0",
     "tslint-config-standard": "^6.0.0",
-    "typedoc": "^0.7.1",
+    "typedoc": "^0.8.0",
     "typescript": "^2.3.4",
-    "validate-commit-msg": "^2.12.2"
+    "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.91.0"
+    "aws-sdk": "^2.91.0",
+    "core-js": "^2.5.0",
+    "debug": "^2.6.8",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "reflect-metadata": "^0.1.10"
   }
 }
