--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
-      "prettier --write --no-semi",
+      "prettier --print-width 170 --single-quote --no-semi --write",
       "git add"
     ]
   },
@@ -100,7 +100,6 @@
     "tsc-watch": "^1.0.5",
     "tslint": "^5.6.0",
     "tslint-config-prettier": "^1.3.0",
-    "tslint-config-standard": "^6.0.0",
     "typedoc": "^0.8.0",
     "typescript": "^2.3.4",
     "validate-commit-msg": "^2.14.0"
