--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
-      "prettier --write --no-semi",
+      "prettier --write --no-semi --trailing-comma es5",
       "git add"
     ]
   },
@@ -77,6 +77,7 @@
     "@types/jest": "^20.0.6",
     "@types/lodash": "^4.14.71",
     "@types/node": "^8.0.19",
+    "@types/uuid": "^3.4.0",
     "colors": "^1.1.2",
     "commitizen": "^2.9.6",
     "coveralls": "^2.13.1",
@@ -111,6 +112,7 @@
     "debug": "^2.6.8",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "reflect-metadata": "^0.1.10"
+    "reflect-metadata": "^0.1.10",
+    "uuid": "^3.1.0"
   }
 }
