make the compiler more strict (noImplicitAny and strictNullChecks) and fix the code to compile again

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
-    "outDir": "compiled"
+    "outDir": "compiled",
+    "noImplicitAny": true,
+    "strictNullChecks": true
   },
   "include": [
     "src"
