--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "es6",
     "module": "es6",
     "lib": [
-      "es6"
+      "es6",
+      "dom"
     ],
     "strict": false,
     "sourceMap": true,
