--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
-    "build": "tsc && rollup -c && rimraf compiled && typedoc --out dist/docs --target es6 --theme minimal src",
+    "build": "tsc && rollup -c && rimraf compiled",
+    "build:webpack": "webpack",
     "start": "tsc-watch --onSuccess \"rollup -c\"",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -76,7 +77,6 @@
     }
   },
   "devDependencies": {
-    "@types/debug": "^0.0.30",
     "@types/jest": "^20.0.7",
     "@types/lodash": "^4.14.73",
     "@types/node": "^8.0.24",
@@ -95,12 +95,13 @@
     "prompt": "^1.0.0",
     "replace-in-file": "^2.5.4",
     "rimraf": "^2.6.1",
-    "rollup": "^0.47.6",
+    "rollup": "^0.48.2",
     "rollup-plugin-commonjs": "^8.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "semantic-release": "^7.0.2",
     "ts-jest": "^20.0.10",
+    "ts-loader": "^2.3.3",
     "ts-node": "^3.0.6",
     "tsc-watch": "^1.0.8",
     "tslint": "^5.6.0",
@@ -117,8 +118,5 @@
     "reflect-metadata": "^0.1.10",
     "uuid": "^3.1.0",
     "winston": "^2.3.1"
-  },
-  "publishConfig": {
-    "access": "restricted"
   }
 }
