--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   },
   "devDependencies": {
     "@types/jest": "^20.0.7",
-    "@types/lodash": "^4.14.73",
+    "@types/lodash-es": "^4.14.6",
     "@types/node": "^8.0.24",
     "@types/uuid": "^3.4.0",
     "@types/winston": "^2.3.4",
@@ -97,6 +97,7 @@
     "rimraf": "^2.6.1",
     "rollup": "^0.48.2",
     "rollup-plugin-commonjs": "^8.1.0",
+    "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "semantic-release": "^7.0.2",
@@ -113,7 +114,7 @@
   "dependencies": {
     "aws-sdk": "^2.100.0",
     "core-js": "^2.5.0",
-    "lodash": "^4.17.4",
+    "lodash-es": "^4.17.4",
     "moment": "^2.18.1",
     "reflect-metadata": "^0.1.10",
     "uuid": "^3.1.0",
