--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "es6",
     "lib": [
       "es6",
-      "dom"
+      "dom",
+      "es2016.array.include"
     ],
     "strict": false,
     "sourceMap": true,
