chore(lodash): replace lodash-es with lodash
ts compiler options allowJs and declarations won't work together (but we need both for d.ts
generation and jest to work with lodash-es) so we go back to lodash for now and try to get a smaller
bundle size later

--- a/package.json
+++ b/package.json
@@ -55,11 +55,8 @@
   "jest": {
     "testEnvironment": "node",
     "transform": {
-      "^.+\\.(j|t)sx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "transformIgnorePatterns": [
-      "<rootDir>/node_modules/(?!lodash-es/.*)"
-    ],
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
       "ts",
