chore(lodash): replace lodash-es with lodash
ts compiler options allowJs and declarations won't work together (but we need both for d.ts

BREAKING CHANGE: bundle size later

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,7 @@
     "declarationDir": "dist/types",
     "outDir": "compiled",
     "noImplicitAny": true,
-    "strictNullChecks": true,
-    "allowJs": true
+    "strictNullChecks": true
   },
   "include": [
     "src"
