--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   },
   "devDependencies": {
     "@types/jest": "^20.0.7",
-    "@types/lodash-es": "^4.14.6",
+    "@types/lodash": "^4.14.74",
     "@types/node": "^8.0.24",
     "@types/uuid": "^3.4.0",
     "@types/winston": "^2.3.4",
@@ -114,7 +114,7 @@
   "dependencies": {
     "aws-sdk": "^2.100.0",
     "core-js": "^2.5.0",
-    "lodash-es": "^4.17.4",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "reflect-metadata": "^0.1.10",
     "uuid": "^3.1.0",
