--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sc-dynamo-object-mapper",
-  "version": "0.0.0-development",
+  "version": "0.0.16",
   "description": "",
   "keywords": [],
   "main": "dist/sc-dynamo-object-mapper.umd.js",
@@ -77,11 +77,11 @@
     }
   },
   "devDependencies": {
+    "@types/debug": "^0.0.30",
     "@types/jest": "^20.0.7",
     "@types/lodash": "^4.14.74",
     "@types/node": "^8.0.24",
     "@types/uuid": "^3.4.0",
-    "@types/winston": "^2.3.4",
     "colors": "^1.1.2",
     "commitizen": "^2.9.6",
     "coveralls": "^2.13.1",
@@ -98,6 +98,8 @@
     "rollup": "^0.48.2",
     "rollup-plugin-commonjs": "^8.1.0",
     "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "semantic-release": "^7.0.2",
@@ -114,10 +116,10 @@
   "dependencies": {
     "aws-sdk": "^2.100.0",
     "core-js": "^2.5.0",
+    "debug": "^3.0.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "reflect-metadata": "^0.1.10",
-    "uuid": "^3.1.0",
-    "winston": "^2.3.1"
+    "uuid": "^3.1.0"
   }
 }
