--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,10 @@
     "strictNullChecks": true
   },
   "include": [
-    "src"
+    "src/**/*"
+  ],
+  "exclude": [
+    "test/**/*",
+    "**/*.spec.ts"
   ]
 }
