--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sc-dynamo-object-mapper",
-  "version": "0.0.16",
+  "version": "0.0.19",
   "description": "",
   "keywords": [],
   "main": "dist/sc-dynamo-object-mapper.umd.js",
@@ -99,7 +99,6 @@
     "rollup-plugin-commonjs": "^8.1.0",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "semantic-release": "^7.0.2",
@@ -119,6 +118,7 @@
     "debug": "^3.0.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "moment-es6": "^1.0.0",
     "reflect-metadata": "^0.1.10",
     "uuid": "^3.1.0"
   }
