refactor(project): change the project and repository name to dynamo-easy which will publish a

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "sc-dynamo-object-mapper",
+  "projectName": "dynamo-easy",
   "projectOwner": "shiftcode",
   "files": [
     "README.md"
