--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ notifications:
   email: false
 node_js:
   - '8'
-before_script:
-  - npm prune && npm cache clean
+#before_script:
+#  - npm prune && npm cache clean
 script:
   - npm run test:prod && npm run build
 after_success:
