feat(package.json): changed on how dependencies get installed

--- a/package.json
+++ b/package.json
@@ -90,8 +90,6 @@
     "aws-sdk": "^2.100.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "moment-es6": "^1.0.0",
-    "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.3",
     "@types/debug": "^0.0.30",
     "@types/jest": "^21.1.2",
@@ -135,5 +133,9 @@
     "moment-es6": "^1.0.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.3"
+  },
+  "dependencies": {
+    "moment-es6": "^1.0.0",
+    "reflect-metadata": "^0.1.10",
   }
 }
