test(mappers): implement unit tests for all mappers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": [
       "dom",
       "es2015",
-      "es2016.array.include"
+      "es2016.array.include",
     ],
     "strict": false,
     "sourceMap": true,
