feat(rxjs6): move to rxjs6
migrate to pipeable operators (refactor operators if required) and also update import paths to match
new structure of rxjs6, provide new update function named update2 to provide better type checking,
introduce new method execNoMap() on query- / scan request to not map to any type intstead just
return the plain response from dynamodb api, fix issue for update request to add the condition to
the right attribute (ConditionExpression instead of FilterExpression)

BREAKING CHANGE: migrate to rxjs 6.0

update request had the condition in the wrong attribute (FilterExpression instead of
ConditionExpression)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamo-easy",
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.0",
   "description": "Use the power of typescript to define your object mapping when using dynamodb. This library also provides a fluent api for easy interaction with dynamodb.",
   "keywords": [
     "aws",
@@ -29,23 +29,24 @@
     "node": ">=6.0.0"
   },
   "scripts": {
-    "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
-    "prebuild": "rimraf dist",
-    "build": "tsc && rollup -c && rimraf compiled && typedoc --out dist/docs --target es6 --theme minimal src",
+    "lint": "npx tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts' --fix",
+    "prebuild": "npx rimraf dist",
+    "build": "tsc && rollup -c && rimraf compiled",
+    "build:old": "tsc && rollup -c && rimraf compiled && typedoc --out dist/docs --target es6 --theme minimal sr",
     "build:webpack": "webpack",
-    "start": "tsc-watch --onSuccess \"rollup -c\"",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "start": "npx tsc-watch --onSuccess \"rollup -c\"",
+    "test": "npx jest",
+    "test:watch": "npx jest --watch",
     "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
-    "deploy-docs": "ts-node tools/gh-pages-publish",
+    "deploy-docs": "npx ts-node tools/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
-    "commit": "git-cz",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "prettier:all": "prettier --write --print-width 120 --single-quote --no-semi --trailing-comma es5 '+(src|test|e2e)/**/*.ts'",
-    "precommit": "yarn run lint -- --fix && lint-staged",
+    "commit": "npx git-cz",
+    "semantic-release": "npx semantic-release pre && npm publish && semantic-release post",
+    "semantic-release-prepare": "npx ts-node tools/semantic-release-prepare",
+    "prettier:all": "npx prettier --write --print-width 120 --single-quote --no-semi --trailing-comma es5 '(src|test|e2e)/**/*.ts'",
+    "precommit": "npm run lint -- --fix && lint-staged",
     "prepush": "npm run test:prod && npm run build",
-    "commitmsg": "validate-commit-msg"
+    "commitmsg": "npx validate-commit-msg"
   },
   "lint-staged": {
     "*.ts": [
@@ -89,21 +90,21 @@
   "devDependencies": {
     "@types/debug": "^0.0.30",
     "@types/jest": "^21.1.2",
-    "@types/lodash": "^4.14.74",
+    "@types/lodash": "^4.14.109",
     "@types/node": "^8.0.26",
     "@types/uuid": "^3.4.1",
-    "aws-sdk": "^2.100.0",
+    "aws-sdk": "^2.245.1",
     "colors": "^1.1.2",
-    "commitizen": "^2.9.6",
+    "commitizen": "^2.10.1",
     "coveralls": "^3.0.0",
     "cross-env": "^5.0.5",
     "cz-conventional-changelog": "^2.0.0",
     "husky": "^0.14.0",
     "jest": "^21.2.1",
     "lint-staged": "^4.0.4",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.10",
     "lodash.camelcase": "^4.3.0",
-    "moment": "^2.18.1",
+    "moment": "^2.22.1",
     "prettier": "^1.6.1",
     "prompt": "^1.0.0",
     "replace-in-file": "^2.6.3",
@@ -114,23 +115,24 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rxjs": "^5.4.3",
+    "rxjs": "^6.0.0",
     "semantic-release": "^8.0.3",
     "ts-jest": "^21.0.1",
     "ts-loader": "^2.3.4",
-    "ts-node": "^3.0.6",
+    "ts-node": "^6.0.5",
     "tsc-watch": "^1.0.8",
-    "tslint": "^5.7.0",
+    "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.5.0",
-    "typedoc": "^0.8.0",
-    "typescript": "^2.5.3",
+    "rxjs-tslint": "^0.1.4",
+    "typedoc": "^0.11.1",
+    "typescript": "^2.8.3",
     "validate-commit-msg": "^2.14.0"
   },
   "peerDependencies": {
     "aws-sdk": "^2.100.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "rxjs": "^5.4.3"
+    "rxjs": "^6.0.0"
   },
   "dependencies": {
     "moment-es6": "^1.0.0",
