build(travis): use npm ci

--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "build:deprecated:old": "tsc && rollup -c && rimraf compiled && typedoc --out dist/docs --target es6 --theme minimal sr",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
+    "test:prod": "npm run test -- --coverage --no-cache",
     "deploy-docs": "ts-node tools/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "prettier:all": "prettier --write --print-width 120 --single-quote --no-semi --trailing-comma es5 '(src|test|e2e)/**/*.ts'",
+    "prettier:all": "prettier --write --config ./.prettierrc.yml '{src,test}/**/*.ts'",
     "precommit": "npm run lint -- --fix && lint-staged",
     "prepush": "npm run test:prod && npm run build",
     "commitmsg": "validate-commit-msg"
