--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
   directories:
   - "$HOME/.npm"
 
-before install:
+before_install:
 - npm install npm@^6.0.0 -g
 
 install:
@@ -21,6 +21,7 @@ notifications:
   email: false
 
 script:
+- npm run lint
 - npm run test:prod && npm run build
 
 after_success:
