--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
 
 cache:
   directories:
-  - "$HOME/.npm"
+  - node_modules
 
 install:
 - npm install
@@ -21,7 +21,7 @@ before_script: npx greenkeeper-lockfile-update
 
 script:
 - npm run lint
-#- npm run test:prod
+- npm run test:prod
 - npm run build
 
 after_script: npx greenkeeper-lockfile-upload
