build(greenkeeper): ignore deps for greenkeeper
when running on a branch created from greenkeeper we cannot use npm ci, because we need to update the package-lock.json, so we differ depending on branch we are running on

--- a/package.json
+++ b/package.json
@@ -65,6 +65,11 @@
       "helpMessage": "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
     }
   },
+  "greenkeeper": {
+    "ignore": [
+      "@types/node"
+    ]
+  },
   "devDependencies": {
     "@types/debug": "^0.0.30",
     "@types/jest": "^23.3.1",
