Revert "build(travis): node@lts contains valid npm version"
This reverts commit b9f39c6620196c96beb1f03a3faa0b5358378455.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ cache:
   - $HOME/.npm
   - node_modules
 
+before_install:
+  - npm install npm@^6.0.0 -g
+
 # npm ci will not work with branches created from greenkeeper, because those need to update the package-lock.json
 # From https://github.com/greenkeeperio/greenkeeper-lockfile#npm:
 # If dependencies in the package lock do not match those in package.json, npm ci will exit with an error, instead
