--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "lint": "prettier --write --config ./.prettierrc.yml '{src,test}/**/*.ts' && tslint --fix -t codeFrame '{src,test}/**/*.ts'",
     "prebuild": "rimraf dist",
-    "build": "tsc --outDir ./dist/_esm2015/ && tsc --outDir ./dist/_esm5/ --target es5 && tsc --outDir ./dist/ --module commonjs && rollup -c",
+    "build": "tsc --outDir ./dist/_esm2015/ && tsc --outDir ./dist/_esm5/ --target es5 && tsc --outDir ./dist/ --module commonjs",
     "build:deprecated:old": "tsc && rollup -c && rimraf compiled && typedoc --out dist/docs --target es6 --theme minimal sr",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -118,11 +118,10 @@
   "peerDependencies": {
     "aws-sdk": "^2.286.1",
     "lodash-es": "^4.17.10",
-    "moment": "^2.18.1",
+    "moment": "^2.22.2",
     "rxjs": "^6.0.0"
   },
   "dependencies": {
-    "moment-es6": "^1.0.0",
     "reflect-metadata": "^0.1.12"
   }
 }
