build(travis): use node 10

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-- lts/*
+- 10
 
 branches:
   only:
@@ -12,8 +12,8 @@ cache:
   - $HOME/.npm
   - node_modules
 
-before_install:
-  - npm install npm@^6.0.0 -g
+#before_install:
+#  - npm install npm@^6.0.0 -g
 
 # npm ci will not work with branches created from greenkeeper, because those need to update the package-lock.json
 # From https://github.com/greenkeeperio/greenkeeper-lockfile#npm:
