--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "scripts": {
     "lint": "prettier --write --config ./.prettierrc.yml '{src,test}/**/*.ts' && tslint --fix -t codeFrame '{src,test}/**/*.ts'",
     "prebuild": "rimraf dist",
-    "build": "tsc --outDir ./dist/_esm2015/ && tsc --outDir ./dist/_esm5/ --target es5 && tsc --outDir ./dist/ --module commonjs",
+    "build": "tsc --outDir ./dist/_esm2015/ && tsc --outDir ./dist/_esm5/ --target es5",
+    "build:docs": "typedoc --out dist/docs --target es6 --theme minimal",
     "build:deprecated:old": "tsc && rollup -c && rimraf compiled && typedoc --out dist/docs --target es6 --theme minimal sr",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -111,7 +112,7 @@
     "tsc-watch": "^1.0.26",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.14.0",
-    "typedoc": "^0.12.0",
+    "typedoc": "^0.13.0",
     "typescript": "^2.9.2",
     "validate-commit-msg": "^2.14.0"
   },
@@ -119,9 +120,9 @@
     "aws-sdk": "^2.286.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "rxjs": "^6.0.0"
+    "rxjs": "^6.0.0",
+    "reflect-metadata": "^0.1.12"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.12"
   }
 }
