--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ script:
 - npm run lint
 - npm run test:prod
 - npm run build
-- num run build:docs
+- npm run build:docs
 
 after_script: npx greenkeeper-lockfile-upload
 
