refactor(mapper): use object instead of class

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,7 +64,10 @@
     "skipLibCheck": true
   },
   "include": [
-    "./src/**/*",
-    "./test/**/*"
+    "src/**/*"
+  ],
+  "exclude": [
+    "test/**/*",
+    "**/*.spec.ts"
   ]
 }
