style(prettier): update config
- make the development branch comparable to the PR branch (#67-make-moment-optional)
- update prettier config
- update tslint config

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "sideEffects": false,
   "scripts": {
-    "lint": "prettier --write --config ./.prettierrc.yml '{src,test}/**/*.ts' && tslint --fix -t codeFrame '{src,test}/**/*.ts'",
+    "lint": "prettier --write --config ./.prettierrc.yml '{src,test}/**/*.ts' && tslint --fix -t codeFrame -p ./tsconfig.json '{src,test}/**/*.ts'",
     "prebuild": "rimraf dist",
     "build": "tsc --outDir ./dist/_esm2015/ && tsc --outDir ./dist/_esm5/ --target es5 && tsc --outDir ./dist/ --module commonjs",
     "build:docs": "typedoc --out dist/docs --target es6 --theme minimal",
