Revert "refactor(prepush-hook): remove temp"
This reverts commit df3ebc57299ecdafe364fc43f3db1fb369871f45.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
     "prettier:all": "prettier --write --config ./.prettierrc.yml '{src,test}/**/*.ts'",
     "precommit": "lint-staged",
+    "prepush": "npm run test:prod && npm run build",
     "commitmsg": "validate-commit-msg"
   },
   "lint-staged": {
