--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: node_js
 node_js:
 - lts/*
 
-cache:
-  directories:
-  - $HOME/.npm
-  - node_modules
+cache: npm
+#  directories:
+#  - $HOME/.npm
+#  - node_modules
 
 #before_install:
 #- npm install npm@^6.0.0 -g
