fix(lint-staged): only lint src files for now
there is an issue when we try to run lint-staged with the glob {src, test}/**/*.ts because the tsconfig will exclude the test files and therefor the tslint script complains about not finding the all the required project files

--- a/.lintstagedrc.yml
+++ b/.lintstagedrc.yml
@@ -1,5 +1,5 @@
 linters:
-  "{src}/**/*.ts":
+  "src/**/*(!spec).ts":
     - prettier --write --config ./.prettierrc.yml
     - tslint --project ./tsconfig.json -t codeFrame --fix
     - git add
