--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "commit": "git-cz",
     "commitmsg": "validate-commit-msg",
     "deploy-docs": "ts-node tools/gh-pages-publish",
-    "lint": "npm run prettier && tslint --project tsconfig.json -t codeFrame --fix",
+    "lint": "tslint --project tsconfig.json -t codeFrame --fix",
+    "lint:ci": "tslint --project tsconfig.json -t codeFrame",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
     "test": "jest",
-    "test:prod": "npm run test -- --coverage --no-cache",
+    "test:ci": "npm run test -- --coverage --no-cache",
     "test:watch": "jest --watch",
     "prettier": "prettier --write --config ./.prettierrc.yml '{src,test}/**/*.ts'"
   },
