--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "deploy-docs": "ts-node tools/gh-pages-publish",
     "lint": "tslint --project tsconfig.json -t codeFrame --fix",
     "lint:ci": "tslint --project tsconfig.json -t codeFrame",
+    "prepush": "npm run test:prod && npm run build",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
     "test": "jest",
