--- a/.huskyrc.yml
+++ b/.huskyrc.yml
@@ -1,3 +1,3 @@
 hooks:
-  precommit: "lint-staged"
-  prepush: "npm run test && npm run build"
+  pre-commit: "lint-staged"
+  pre-push: "npm run test && npm run build"
