--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "prebuild": "rimraf dist",
     "build": "tsc --outDir ./dist/_esm2015/ && tsc --outDir ./dist/_esm5/ --target es5 && tsc --outDir ./dist/ --module commonjs",
     "build:docs": "typedoc --out dist/docs --target es6 --theme minimal",
-    "commit": "git-cz",
-    "commitmsg": "validate-commit-msg",
+    "commity": "commit",
     "deploy-docs": "ts-node tools/gh-pages-publish",
     "lint": "tslint --project tsconfig.json -t codeFrame --fix",
     "lint:ci": "tslint --project tsconfig.json -t codeFrame",
@@ -41,16 +40,10 @@
     "test:watch": "jest --watch",
     "prettier": "prettier --write --config ./.prettierrc.yml '{src,test}/**/*.ts'"
   },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-conventional-changelog"
-    },
-    "validate-commit-msg": {
-      "types": "conventional-commit-types",
-      "helpMessage": "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
-    }
-  },
   "devDependencies": {
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
+    "@commitlint/prompt-cli": "^7.2.1",
     "@types/jest": "^23.3.1",
     "@types/lodash": "^4.14.116",
     "@types/node": "^8.0.26",
@@ -58,10 +51,8 @@
     "@types/uuid": "^3.4.1",
     "aws-sdk": "^2.286.1",
     "colors": "^1.1.2",
-    "commitizen": "^3.0.0",
     "coveralls": "^3.0.0",
     "cross-env": "^5.0.5",
-    "cz-conventional-changelog": "^2.0.0",
     "greenkeeper-lockfile": "^1.15.1",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
@@ -80,8 +71,7 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.16.0",
     "typedoc": "^0.13.0",
-    "typescript": "^3.1.6",
-    "validate-commit-msg": "^2.14.0"
+    "typescript": "^3.1.6"
   },
   "peerDependencies": {
     "aws-sdk": "^2.286.1",
