--- a/.huskyrc.yml
+++ b/.huskyrc.yml
@@ -1,4 +1,4 @@
 hooks:
-  commit-msg: "commitlint -E HUSKY_GIT_PARAMS",
+  commit-msg: "commitlint -E HUSKY_GIT_PARAMS"
   pre-commit: "lint-staged"
   pre-push: "npm run test && npm run build"
