feat(reflect-metadata): remove import
- reflect-metadata should only exist once in the whole code base of a project so the consumer of our library must import the reflect-metadata project, even if he might not use it in his code base. But if he uses the reflect-metadata in his code or uses another library like InversifyJS we must ensure the Reflect global variable only exists once, to prevent from possible hard to debug issues

--- a/.lintstagedrc.yml
+++ b/.lintstagedrc.yml
@@ -3,6 +3,9 @@ linters:
     - prettier --write --config ./.prettierrc.yml
     - tslint --project ./tsconfig.json -t codeFrame --fix
     - git add
+  "(src/**/*.spec.ts,test/**/*.ts)":
+    - prettier --write --config ./.prettierrc.yml
+    - tslint --project ./tsconfig.jest.json -t codeFrame --fix
   "**/package.json":
     - sort-package-json
     - git add
