--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@types/jest": "^23.3.1",
     "@types/lodash": "^4.14.116",
     "@types/node": "^8.0.26",
-    "@types/reflect-metadata": "^0.1.0",
     "@types/uuid": "^3.4.1",
     "aws-sdk": "^2.286.1",
     "colors": "^1.1.2",
@@ -60,6 +59,7 @@
     "lodash": "^4.17.11",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.15.2",
+    "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
     "semantic-release": "^15.12.0",
