--- a/package.json
+++ b/package.json
@@ -71,12 +71,14 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.16.0",
     "typedoc": "^0.13.0",
-    "typescript": "^3.1.6"
+    "typescript": "^3.1.6",
+    "uuid": "^3.3.2"
   },
   "peerDependencies": {
     "aws-sdk": "^2.286.1",
     "lodash": "^4.17.10",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.0.0"
+    "rxjs": "^6.0.0",
+    "uuid": "^3.3.2"
   }
 }
